# Hermes-Companion

./: .env.example  .env.release.example  .gitattributes  .gitignore  HERMES-ADDON-AUDIT.md  MEMORY-ARCHITECTURE.md  OPERATIONS-RUNBOOK.md  README.md  RELEASE-SIGNING.md  SECURITY.md  SIMPLE-ONBOARDING-PLAN.md  architecture.md  index.html  package-lock.json  package.json  production-plan.md  security-hardening.md
.github/workflows/: ci.yml
central-api/: requirements.txt  server.py
central-skill/: issue_remote_invite.py  list_remote_nodes.py  register_remote_node.py  revoke_remote_node.py
chat-bridge/: server.py
daemon/: hermes-node-daemon.py  requirements.txt
daemon/service/: com.hermes.node.daemon.plist  (+2 more)
deploy/: README.md  central-api.env.example  chat-bridge.env.example  docker-compose.mem0.yml  mem0.env.example  memory-service.env.example
memory-service/: requirements.txt  server.py
scripts/: assert-windows-signatures.ps1  build-linux.sh  build-macos.sh  build-windows.ps1  create-delivery-package.sh  generate-release-config.mjs  generate-release-manifest.mjs  notarize-macos.sh  prepare-resources.mjs  provision-chat-bridge-home.py  sign-windows.ps1  validate-central-api-deploy.py  validate-release-env.mjs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  daemon.rs  lib.rs  main.rs  models.rs  secrets.rs
tests/: e2e_live_stack.py  smoke_central_api.py  smoke_central_api_webui_bridge.py  smoke_chat_bridge.py  smoke_daemon.py  smoke_daemon_secure_store.py
(+9 files in other folders)
